--- a/styles/style.css
+++ b/styles/style.css
@@ -12,6 +12,7 @@ html {
   inline-size: 1200px;
   block-size: 100%;
   margin: auto;
+  padding: 133px 30px;
   color: #fff;
   font-family: 'Fira Sans Condensed', sans-serif;
   font-size: 18px;
@@ -35,4 +36,252 @@ fieldset {
 ul,
 ol {
   list-style: none;
+}
+
+.content {
+  display: flex;
+  gap: 30px;
+  align-items: end;
+}
+
+.result {
+  width: 711px;
+  padding-top: 78px;
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+}
+
+.result__video-container {
+  width: 100%;
+  height: 386px;
+  position: relative;
+}
+
+.result__video {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+  inset: 0;
+}
+
+.search-form {
+  display: flex;
+  justify-content: space-between;
+  align-items: end;
+}
+
+.search-form__fieldset {
+  border: none;
+}
+
+.search-form__fieldset-title {
+  font-size: inherit;
+  font-weight: 400;
+  line-height: 21.6px;
+}
+
+.search-form__textfield {
+  font-family: inherit;
+  font-size: inherit;
+  font-weight: 400;
+  margin-top: 5px;
+  padding-top: 2.5px;
+  padding-bottom: 2.5px;
+  padding-left: 0;
+  width: 225px;
+  cursor: pointer;
+  appearance: none;
+  background-color: inherit;
+  border: none;
+  border-top: 1px solid rgba(255, 255, 255, 1);
+  border-bottom: 1px solid rgba(255, 255, 255, 1);
+}
+
+.search-form__textfield:focus {
+  outline: none;
+}
+
+.search-form__label:focus {
+  outline: none;
+}
+
+.search-form__label:hover {
+  text-decoration: underline;
+}
+
+.search-form__label:has(:focus-visible) {
+  outline: 1px solid rgba(255, 255, 255, 1);
+  outline-offset: 2px;
+}
+
+.search-form__checkbox-list {
+  margin-top: 5px;
+  margin-bottom: 5px;
+  display: flex;
+  gap: 15px;
+}
+
+.search-form__checkbox-list .search-form__label {
+  display: flex;
+  gap: 1.5px;
+}
+
+.search-form__pseudo-checkbox {
+  cursor: pointer;
+  position: relative;
+  display: inline-block;
+  width: 19px;
+  height: 19px;
+  border: 1px solid rgba(255, 255, 255, 1);
+}
+
+.search-form__checkbox:checked + .search-form__pseudo-checkbox::before {
+  content: '';
+  width: 15px;
+  height: 15px;
+  position: absolute;
+  inset: 1px;
+  background-color: #fff;
+}
+
+.button {
+  width: 100%;
+  padding-top: 6px;
+  padding-bottom: 6px;
+  border: 1px solid rgba(255, 255, 255, 1);
+  background-color: inherit;
+  color: inherit;
+  font-family: inherit;
+  font-size: inherit;
+  font-weight: 700;
+  cursor: pointer;
+}
+
+.button:active {
+  background-color: rgba(84, 80, 80, 1);
+}
+
+.button:focus {
+  outline: none;
+}
+
+.button:focus-visible {
+outline: 1px solid rgba(255, 255, 255, 1);
+outline-offset: 2px;
+}
+
+.button:hover {
+  text-decoration: underline;
+}
+
+.search-form__submit-button {
+  width: 194px;
+}
+
+.content__details {
+  width: 399px;
+  display: flex;
+  flex-direction: column;
+  gap: 26px;
+}
+
+.title {
+font-family: Oswald;
+font-size: 75px;
+font-weight: 700;
+line-height: 70.5px;
+text-align: left;
+text-transform: uppercase;
+}
+
+.content__accent {
+  color: rgba(84, 80, 80, 1);
+}
+
+.content__list {
+  /* width: 413px; /* компенсация занятой скролл-баром ширины */
+  position: relative;
+  height: 298px;
+  overflow: hidden auto;
+  /* display: flex;  
+  flex-direction: column;
+  gap: 30px; */
+}
+
+.content__list-item:not(:last-of-type) {
+  margin-bottom: 30px;
+}
+
+.content__card-link {
+  margin: 2px;
+  padding-top: 2px;
+  padding-bottom: 4px;
+  padding-left: 2px;
+  display: block;
+  text-decoration: none;
+  color: inherit;
+}
+
+.content__card-link:focus {
+  outline: none;
+}
+
+.content__card-link:hover {
+  text-decoration: underline;
+}
+
+.content__card-link:focus-visible {
+  outline: 1px solid rgba(255, 255, 255, 1);
+  /* outline-offset: 1px; */
+}
+
+.content__card-link_current {
+  background-color: rgba(84, 80, 80, 1);
+}
+
+.content__video-card {
+  display: flex;
+  justify-content: space-between;
+  align-items: start;
+}
+
+.content__video-card-description-container {
+  display: flex;
+  flex-direction: column;
+  gap: 6px;
+}
+
+.content__video-card-title {
+  font-family: Oswald;
+  font-size: 30px;
+  font-weight: 700;
+  line-height: 30px;
+  text-align: left;
+  text-transform: uppercase;
+}
+
+.content__video-card-description {
+  line-height: 16.2px;
+  /* font-family: Fira Sans Condensed;
+  font-size: 18px;
+  font-weight: 400;
+  text-align: left; */
+}
+
+.content__video-card-thumbnail {
+  width: 194px;
+  height: 103px;
+}
+
+.visually-hidden {
+  position: absolute;
+  inline-size: 1px;
+  block-size: 1px;
+  overflow: hidden;
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  white-space: nowrap;
 }
