без верхнего паддинга

--- a/styles/style.css
+++ b/styles/style.css
@@ -12,7 +12,7 @@ html {
   inline-size: 1200px;
   block-size: 100%;
   margin: auto;
-  padding: 133px 30px;
+  padding: 0 30px;
   color: #fff;
   font-family: 'Fira Sans Condensed', sans-serif;
   font-size: 18px;
@@ -131,20 +131,15 @@ ol {
 
 .search-form__pseudo-checkbox {
   cursor: pointer;
-  position: relative;
   display: inline-block;
   width: 19px;
   height: 19px;
   border: 1px solid rgba(255, 255, 255, 1);
 }
 
-.search-form__checkbox:checked + .search-form__pseudo-checkbox::before {
-  content: '';
-  width: 15px;
-  height: 15px;
-  position: absolute;
-  inset: 1px;
+.search-form__checkbox:checked + .search-form__pseudo-checkbox { 
   background-color: #fff;
+  box-shadow: inset 0 0 0 1px black;
 }
 
 .button {
