--- a/styles/style.css
+++ b/styles/style.css
@@ -12,7 +12,7 @@ html {
   inline-size: 1200px;
   block-size: 100%;
   margin: auto;
-  padding: 0 30px;
+  padding: 133px 30px 0 30px;
   color: #fff;
   font-family: 'Fira Sans Condensed', sans-serif;
   font-size: 18px;
