--- a/styles/style.css
+++ b/styles/style.css
@@ -12,7 +12,6 @@ html {
   inline-size: 1200px;
   block-size: 100%;
   margin: auto;
-  padding: 133px 30px 0 30px;
   color: #fff;
   font-family: 'Fira Sans Condensed', sans-serif;
   font-size: 18px;
@@ -39,6 +38,7 @@ ol {
 }
 
 .content {
+  margin: 133px 30px;
   display: flex;
   gap: 30px;
   align-items: end;
