--- a/styles/style.css
+++ b/styles/style.css
@@ -10,7 +10,7 @@ html {
 
 .page {
   inline-size: 1200px;
-  block-size: 800px;
+  block-size: 100%;
   margin: auto;
   color: #fff;
   font-family: 'Fira Sans Condensed', sans-serif;
@@ -38,7 +38,7 @@ ol {
 }
 
 .content {
-  margin: 133px 30px;
+  margin: 266px 30px 0;
   display: flex;
   gap: 30px;
   align-items: end;
