--- a/styles/style.css
+++ b/styles/style.css
@@ -12,13 +12,13 @@ html {
   display: flex;
   justify-content: center;
   align-items: center;
-  inline-size: 1200px;
-  block-size: 100%;
   margin: auto;
   color: #fff;
-  font-family: 'Fira Sans Condensed', sans-serif;
+  font-family: "Fira Sans Condensed", sans-serif;
   font-size: 18px;
   background-color: #1b1919;
+  inline-size: 1200px;
+  block-size: 100%;
 }
 
 h1,
@@ -42,21 +42,21 @@ ol {
 
 .content {
   display: flex;
-  gap: 30px;
   align-items: end;
+  gap: 30px;
 }
 
 .result {
-  width: 711px;
   display: flex;
   flex-direction: column;
   gap: 16px;
+  width: 711px;
 }
 
 .result__video-container {
+  position: relative;
   width: 100%;
   height: 386px;
-  position: relative;
 }
 
 .result__video {
@@ -67,9 +67,9 @@ ol {
 }
 
 .search-form {
-  display: flex; 
-  gap: 40px;
+  display: flex;
   align-items: end;
+  gap: 40px;
 }
 
 .search-form__fieldset {
@@ -77,14 +77,14 @@ ol {
 }
 
 .search-form__fieldset-title {
-  font-size: inherit;
   font-weight: 400;
+  font-size: inherit;
   line-height: 1.2;
 }
 
 .search-form__label {
-  cursor: pointer;
   width: fit-content;
+  cursor: pointer;
 }
 
 .search-form__label:hover .search-form__label-text {
@@ -98,34 +98,35 @@ ol {
 
 .search-form__textfield {
   width: 225px;
-  font-family: inherit;
-  font-size: inherit;
-  font-weight: 400;
   margin-top: 5px;
-  padding-top: 2.5px;
-  padding-bottom: 2.5px;
-  padding-left: 0;
-  cursor: pointer;
-  appearance: none;
-  background-color: inherit;
   border: none;
   border-top: 1px solid rgba(255, 255, 255, 1);
   border-bottom: 1px solid rgba(255, 255, 255, 1);
+  padding-top: 2.5px;
+  padding-bottom: 2.5px;
+  padding-left: 0;
+  font-family: inherit;
+  font-weight: 400;
+  font-size: inherit;
+  background-color: inherit;
+  cursor: pointer;
+  appearance: none;
+}
+
+.search-form__textfield:active {
+  border: none;
+  outline: 1px solid rgba(255, 255, 255, 1);
 }
 
 .search-form__textfield:focus {
   outline: none;
 }
 
-.search-form__textfield:active {
-
-}
-
 .search-form__checkbox-list {
-  margin-top: 5px;
-  margin-bottom: 5px;
   display: flex;
   gap: 15px;
+  margin-top: 5px;
+  margin-bottom: 5px;
 }
 
 .search-form__checkbox-list .search-form__label {
@@ -140,21 +141,21 @@ ol {
   border: 1px solid rgba(255, 255, 255, 1);
 }
 
-.search-form__checkbox:checked + .search-form__pseudo-checkbox { 
-  background-color: #fff;
+.search-form__checkbox:checked + .search-form__pseudo-checkbox {
   box-shadow: inset 0 0 0 1px black;
+  background-color: #fff;
 }
 
 .button {
   width: 100%;
+  border: 1px solid rgba(255, 255, 255, 1);
   padding-top: 6px;
   padding-bottom: 6px;
-  border: 1px solid rgba(255, 255, 255, 1);
-  background-color: inherit;
   color: inherit;
   font-family: inherit;
-  font-size: inherit;
   font-weight: 700;
+  font-size: inherit;
+  background-color: inherit;
   cursor: pointer;
 }
 
@@ -167,8 +168,8 @@ ol {
 }
 
 .button:focus-visible {
-outline: 1px solid rgba(255, 255, 255, 1);
-outline-offset: 2px;
+  outline: 1px solid rgba(255, 255, 255, 1);
+  outline-offset: 2px;
 }
 
 .button:hover {
@@ -188,8 +189,8 @@ outline-offset: 2px;
 
 .title {
   font-family: Oswald, sans-serif;
-  font-size: 75px;
   font-weight: 700;
+  font-size: 75px;
   line-height: 0.94;
   text-align: left;
   text-transform: uppercase;
@@ -213,13 +214,13 @@ outline-offset: 2px;
 }
 
 .content__card-link {
+  display: block;
   margin: 2px;
   padding-top: 2px;
   padding-bottom: 4px;
   padding-left: 2px;
-  display: block;
-  text-decoration: none;
   color: inherit;
+  text-decoration: none;
 }
 
 .content__card-link:focus {
@@ -240,9 +241,9 @@ outline-offset: 2px;
 }
 
 .content__video-card {
-  height: 107px;
   display: flex;
   justify-content: space-between;
+  height: 107px;
 }
 
 .content__video-card-description-container {
@@ -252,16 +253,16 @@ outline-offset: 2px;
 }
 
 .content__video-card-title {
+  max-width: 200px;
+  overflow: hidden;
   font-family: Oswald, sans-serif;
-  font-size: 30px;
   font-weight: 700;
+  font-size: 30px;
   line-height: 1;
   text-align: left;
   text-transform: uppercase;
   text-overflow: ellipsis;
   white-space: nowrap;
-  overflow: hidden;
-  max-width: 200px;
 }
 
 .content__video-card-description {
@@ -269,17 +270,17 @@ outline-offset: 2px;
 }
 
 .content__video-card-thumbnail {
+  flex: 0 1 193px;
   object-fit: fill;
   object-position: center;
-  flex: 0 1 193px;
 }
 
 .visually-hidden {
   position: absolute;
-  inline-size: 1px;
-  block-size: 1px;
   overflow: hidden;
   clip: rect(0 0 0 0);
+  inline-size: 1px;
+  block-size: 1px;
   clip-path: inset(50%);
   white-space: nowrap;
 }
