--- a/styles/style.css
+++ b/styles/style.css
@@ -105,6 +105,7 @@ ol {
   padding-top: 2.5px;
   padding-bottom: 2.5px;
   padding-left: 0;
+  color: inherit;
   font-family: inherit;
   font-weight: 400;
   font-size: inherit;
@@ -114,7 +115,6 @@ ol {
 }
 
 .search-form__textfield:active {
-  border: none;
   outline: 1px solid rgba(255, 255, 255, 1);
 }
 
@@ -181,7 +181,7 @@ ol {
 }
 
 .content__details {
-  /* width: 399px; */
+  min-width: 399px;
   display: flex;
   flex-direction: column;
   gap: 26px;
@@ -223,6 +223,12 @@ ol {
   text-decoration: none;
 }
 
+/* Замечание: 
+[Надо исправить Не хватает состояния :active по макету]
+
+Из задания:
+[Первая карточка должна быть активной, а при переключении активная карточка должна выделяться. Это поведение уже написано на JavaScript. Но в CSS должны оказаться соответствующие стили для селектора .content__card-link_current.]*/
+
 .content__card-link:focus {
   outline: none;
 }
@@ -243,7 +249,6 @@ ol {
 .content__video-card {
   display: flex;
   justify-content: space-between;
-  height: 107px;
 }
 
 .content__video-card-description-container {
@@ -270,8 +275,10 @@ ol {
 }
 
 .content__video-card-thumbnail {
-  flex: 0 1 193px;
-  object-fit: fill;
+  width: 194px;
+  height: 103px;
+  flex: 0 0 194px;
+  object-fit: cover;
   object-position: center;
 }
 
