--- a/styles/style.css
+++ b/styles/style.css
@@ -231,6 +231,10 @@ ol {
 Первая карточка должна быть активной, а при переключении активная карточка должна выделяться. Это поведение уже написано на JavaScript. Но в CSS должны оказаться соответствующие стили для селектора .content__card-link_current.
 */
 
+.content__card-link:active {
+  background-color: rgba(84, 80, 80, 1);
+}
+
 .content__card-link:focus {
   outline: none;
 }
